<resources>
    <string name="app_name">Longitude</string>
    <string name="artistTest">Artist Test</string>
    <string name="timetableTest">Time Table Test</string>
    <string name="imageTest">Image Test</string>
    <string name="locationTest">Location Test</string>
    <string name="location_button">location button</string>
    <string name="we_are_music">We are Music.</string>
    <string name="we_are_life">We are Life.</string>
    <string name="timetable">Timetable</string>
    <string name="todo">TODO</string>
    <string name="artists">Artists</string>
    <string name="_6_30">6:30.</string>
    <string name="pop">Pop.</string>
    <string name="main_stage">Main Stage.</string>
    <string name="ariana_grande">Ariana Grande.</string>
    <string name="hint_Artist_Name">Artist</string>
    <string name="arena">Arena</string>
    <string name="genre">Genre</string>
    <string name="time">Time</string>
    <string name="upload">Upload</string>
    <string name="select_artist_image">Select an Artist Image</string>

    <string-array name="arena_array">
    <item>Arena</item>
    <item>Main Stage</item>
    <item>Heineken Tent</item>
    <item>Social Tent</item>
    <item>Techno Trailer</item>
        <item>Red Bull Arena</item>
</string-array>

    <string-array name="genre_array">
    <item>Genre</item>
    <item>Pop</item>
    <item>Alternate</item>
    <item>Rap</item>
    <item>EDM</item>
    <item>Techno</item>
</string-array>

    <string-array name="day_array">
        <item>Day</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
</resources>
