<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C3E4F3"
    tools:context=".home.homeScreen">


    <android.support.v7.widget.Toolbar
        android:id="@+id/homeToolbar"
        android:layout_width="420dp"
        android:layout_height="wrap_content"
        android:background="#C3E4F3"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/locationButton"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/location_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageButton"
        app:srcCompat="@mipmap/locationicon" />

    <ImageView
        android:id="@+id/imageButton"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/homeButton"
        app:srcCompat="@mipmap/imagesicon"
        android:contentDescription="TODO" />

    <ImageView
        android:id="@+id/timetableButton"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/homeToolbar"
        app:layout_constraintStart_toEndOf="@+id/homeButton"
        app:srcCompat="@mipmap/timetableicon"
        android:contentDescription="TODO" />

    <ImageView
        android:id="@+id/homeButton"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/homeToolbar"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/homeToolbar"
        app:srcCompat="@mipmap/homeicon"
        android:contentDescription="TODO" />

    <ImageView
        android:id="@+id/artistButton"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/timetableButton"
        app:srcCompat="@mipmap/artisticon"
        android:contentDescription="TODO" />

    <ImageView
        android:id="@+id/logoTop"
        android:layout_width="145dp"
        android:layout_height="53dp"
        android:layout_marginStart="133dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="133dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/logo"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="215dp"
        android:layout_height="175dp"
        android:layout_marginEnd="170dp"
        android:layout_marginBottom="200dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/we_are_music"
        android:textColor="#FFFFFF"
        android:textSize="65sp"
        app:layout_constraintBottom_toTopOf="@+id/homeToolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="215dp"
        android:layout_height="175dp"
        android:layout_marginStart="185dp"
        android:layout_marginTop="300dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/we_are_life"
        android:textColor="#FFFFFF"
        android:textSize="65sp"
        app:layout_constraintBottom_toTopOf="@+id/homeToolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.CardView
        android:id="@+id/secondCard"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="300dp"
        app:layout_constraintBottom_toTopOf="@+id/homeToolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@mipmap/jon"
            android:contentDescription="TODO" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/firstCard"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="200dp"
        app:layout_constraintBottom_toTopOf="@+id/homeToolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@mipmap/ariana"
            android:contentDescription="TODO" />
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>